add update and place

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,6 @@
 <h1>
   <%= gravatar_for @user %>
   <%= @user.name %>
+<span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
+<%= @user.place %>
 </h1>
