--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,6 +6,10 @@
         <%= @user.name %>
       </h1>
     </section>
+    <section>
+      <h2><%= link_to "Followings", followings_user_path(@user) %></h2>
+      <h2><%= link_to "Followers", followers_user_path(@user) %></h2>
+    </section>
   </aside>
   <div class="col-md-8">
     <%= render 'follow_form' if logged_in? %>
