--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -190,14 +190,15 @@ span.picture {
   }
 }
 
-/* followings */
+/* follow */
 
-.followings {
-  list-style: none;
-  padding: 0;
-  li {
-    padding: 10px 0;
-    border-top: 1px solid #e8e8e8;
+.follow {
+  list-style-type: none;
+  padding: 10px 0 30px 0;
+  border-top: 1px solid #e8e8e8;
   }
   
+.follow_buttom {
+  word-spacing: 10px;
+  text-align: left;
 }
